Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "\n",
     "# Create a new figure object\n",
-    "plt.figure(f)\n",
+    "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "\n",
