--- a/index.ipynb
+++ b/index.ipynb
@@ -58,6 +58,7 @@
     "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
+    "plt.\n",
     "\n",
     "# Give a title to the bar graph\n",
     "\n",
