Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,6 +61,7 @@
     "plt.bar(x,y)\n",
     "\n",
     "# Give a title to the bar graph\n",
+    "plt.tile(\"\")\n",
     "\n",
     "# Output the final plot\n"
    ]
