Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,9 +61,10 @@
     "plt.bar(x,y)\n",
     "\n",
     "# Give a title to the bar graph\n",
-    "plt.tile(\"\")\n",
+    "plt.tile(\"Jim's Video Library\")\n",
     "\n",
-    "# Output the final plot\n"
+    "# Output the final plot\n",
+    "plt.show\n"
    ]
   },
   {
