--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
     "plt.tile(\"Jim's Video Library\")\n",
     "\n",
     "# Output the final plot\n",
-    "plt.show\n"
+    "plt.show()\n"
    ]
   },
   {
