--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = None\n",
-    "x =None\n",
+    "x = [\"Crime, \"]\n",
     "labels = None\n",
     "\n",
     "\n",
