Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = None\n",
-    "x = [\"Crime\", \"Sci/fi\", \"Drama\", ]\n",
+    "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentar\"]\n",
     "labels = None\n",
     "\n",
     "\n",
