Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,8 +49,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "y = None\n",
-    "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentar\"]\n",
+    "y = y=np.ra\n",
+    "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentary\"]\n",
     "labels = None\n",
     "\n",
     "\n",
