--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "y = y=np.ra\n",
+    "y = y=np.random.\n",
     "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentary\"]\n",
     "labels = None\n",
     "\n",
