--- a/index.ipynb
+++ b/index.ipynb
@@ -56,8 +56,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "y = \n",
-    "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentary\"]\n",
+    "y = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentary\"]\n",
+    "x = [40, 30, 10, 50, 25, 5]\n",
     "labels = None\n",
     "\n",
     "\n",
