Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
-    "plt.bar(x,y)\n",
+    "plt.bar(x,y, label)\n",
     "\n",
     "# Give a title to the bar graph\n",
     "plt.tile(\"Jim's Video Library\")\n",
