Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,6 +74,8 @@
     "\n",
     "\n",
     "\n",
+    "# Create a new figure object\n",
+    "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "plt.bar(x,y, label=\"sample data\")\n",
