--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "y = [40, 30, 10, 50, 25, 5]\n",
+    "y = array([40, 30, 10, 50, 25, 5]\n",
     "x = [\"Crime\", \"Sci/fi\", \"Drama\", \"Comedy\", \"Action\" \"Documentary\"]\n",
     "labels = None\n",
     "\n",
