Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
-    "plt.bar(x, 60)\n",
+    "plt.bar(x, 60, label=\"Moovi\")\n",
     "\n",
     "# Give a title to the bar graph\n",
     "plt.title(\"Jim's Video Library\")\n",
