--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,8 @@
     "plt.title(\"Jim's Video Library\")\n",
     "\n",
     "# Output the final plot\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "type()\n"
    ]
   },
   {
