Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,16 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Crime', 'Sci/fi', 'Drama', 'Comedy', 'ActionDocumentary']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -68,7 +78,7 @@
     "\n",
     "# Output the final plot\n",
     "plt.show()\n",
-    "type()\n"
+    "x\n"
    ]
   },
   {
