Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +48,10 @@
     {
      "data": {
       "text/plain": [
-       "['Crime', 'Sci/fi', 'Drama', 'Comedy', 'ActionDocumentary']"
+       "list"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
     "\n",
     "# Output the final plot\n",
     "plt.show()\n",
-    "x\n"
+    "type"
    ]
   },
   {
