--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +48,10 @@
     {
      "data": {
       "text/plain": [
-       "list"
+       "[40, 30, 10, 50, 25, 5]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,8 +77,7 @@
     "plt.title(\"Jim's Video Library\")\n",
     "\n",
     "# Output the final plot\n",
-    "plt.show()\n",
-    "type"
+    "plt.show()\n"
    ]
   },
   {
